tests/fixtures/invalid/max_str_list.py
# Cannot call max() with Str, List[int]
x = max("hello", [1, 2, 3])
